Fix datalist alignment.

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -284,9 +284,7 @@ h2 {
 .form--input {
     width: 50%;
     margin: 0 auto;
-    @include desktop() {
-        width: 494px;
-    }
+    max-width: 450px;
 }
 
 .input {
